css/style.css
/* ... */
.contact_section button:hover {
  background-color: #cc0404;
}

.info_section {
  background-color: #201f33;
  color: #ffffff;
  font-family: 'Open Sans', sans-serif;
}

.info_section h4 {
  font-weight: bold;
  margin-bottom: 20px;
}

.info_links ul {
  padding-left: 15px;
}

.info_links ul .active::before {
  background-color: #0304048c;
}

.info_links ul li {
  list-style-type: none;
  position: relative;
}

.info_links ul li::before {
  content: "";
  left: -15px;
  top: 50%;
  position: absolute;
  width: 8px;
  height: 8px;
  background-color: #ffffff;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
}

.info_links ul li a {
  color: #ffffff;
}

.info_form input {
  width: 100%;
  border: none;
  height: 45px;
  margin-bottom: 25px;
  padding-left: 25px;
  background-color: #eaeaea;
  outline: none;
  color: #101010;
}

.info_form button {
  background-color: #0304048c;
  padding: 8px 35px;
  outline: none;
  border: none;
  border-radius: 30px;
  color: #fff;
  text-transform: uppercase;
}

.info_form button:hover {
  background-color: #0304048c;
}

.info_social .social_container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.info_social .social_container a {
  margin: 0 5px;
}

.info_social .social_container a img {
  width: 35px;
}

.info_contact > div {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
}

.info_contact > div img {
  width: 20px;
  height: auto;
  margin-right: 12px;
}

/* footer section*/
.footer_section {
  background-color: #201f33;
  font-weight: 500;
  font-family: 'Roboto', sans-serif;
}

.footer_section p {
  border-top: 1px solid #ffffff;
  width: 60%;
  color: #ffffff;
  margin: 0 auto;
  text-align: center;
  padding: 20px 35px;
}

.footer_section a {
  color: #ffffff;
}
/*# sourceMappingURL=style.css.map */

